eliminate some contractions
add a todo to finish the job

--- a/main.tex
+++ b/main.tex
@@ -36,6 +36,8 @@
 
 \todo[inline]{You're not very consistent about using $\G$ or $\Gamma$ to denote an arbitrary formal group. It seems like you use one or the other based on your preference of whether it has finite height or not.}
 
+\todo[inline]{Eliminate contractions.}
+
 
 
 
