--- a/mo.tex
+++ b/mo.tex
@@ -80,7 +80,7 @@ BO \times BO \rar["\sigma",equiv'] \arrow[bend right]{rrd} & BO \times BO \arrow
 \end{center}
 We have extended this square very slightly by a certain shearing map $\sigma$ defined by $\sigma(x, y) = (xy^{-1}, y)$.
 \todo{$\sigma$ \emph{almost} shows up in giving a categorical definition of a $G$--torsor.  I wish I understood this, but I always get tangled up.}
-It's evident that $\sigma$ is a homotopy equivalence, since just as we can de-scale the first coordinate by $y$ we can re-scale by it.  We can calculate directly the behavior of the long composite: \[J_{\R} \circ \mu \circ \sigma(x, y) = J_{\R} \circ \mu(xy^{-1}, y) = J_{\R}(xy^{-1}y) = J_{\R}(x).\]  It follows that the second coordinate plays no role, and that the bundle classified by the long composite can be written as $J_{\R} \times 0$.\footnote{This factorization does \emph{not} commute with the rest of the diagram, just with the little lifting triangle it forms.}  We are now in a position to see the Thom isomorphism:
+It is evident that $\sigma$ is a homotopy equivalence, since just as we can de-scale the first coordinate by $y$ we can re-scale by it.  We can calculate directly the behavior of the long composite: \[J_{\R} \circ \mu \circ \sigma(x, y) = J_{\R} \circ \mu(xy^{-1}, y) = J_{\R}(xy^{-1}y) = J_{\R}(x).\]  It follows that the second coordinate plays no role, and that the bundle classified by the long composite can be written as $J_{\R} \times 0$.\footnote{This factorization does \emph{not} commute with the rest of the diagram, just with the little lifting triangle it forms.}  We are now in a position to see the Thom isomorphism:
 \begin{lemma}[Thom isomorphism, universal example]
 As $MO$--modules, \[MO \sm MO \simeq MO \sm \Susp^\infty_+ BO.\]
 \end{lemma}
@@ -134,7 +134,7 @@ One of the tentpoles of the theory of Thom spectra is that \Cref{GeneralThomIsom
 \end{remark}
 
 \begin{example}\label{HF2RPinftyExample}
-We'll close out this section by using this to actually make a calculation. Recall from \Cref{RPnThomExample} that $T(\L \downarrow \RP^n) = \RP^{n+1}$.  Because $MO$ is a connective spectrum, the diagram\todo{This is \emph{still} not a proof of this. Ugh.}
+We will close out this section by using this to actually make a calculation. Recall from \Cref{RPnThomExample} that $T(\L \downarrow \RP^n) = \RP^{n+1}$.  Because $MO$ is a connective spectrum, the diagram\todo{This is \emph{still} not a proof of this. Ugh.}
 \begin{center}
 \begin{tikzcd}
 MO \sm MO \arrow{d} \arrow{r} & (MO \sm MO)(-\infty, 0] \arrow{r} \arrow[equal]{d} & MO(-\infty, 0] \sm MO(-\infty, 0] \arrow[densely dotted]{ld} \arrow[equal]{r} & H\pi_0 MO \sm H\pi_0 MO \arrow[densely dotted]{d} \\
@@ -157,7 +157,7 @@ This powers an induction that shows $H\F_2{}_* \RP^\infty$ has a single class in
 
 \section{Cohomology rings and affine schemes}
 
-An abbreviated summary of this semester is that we're going to put ``$\Spec$'' in front of rings appearing in algebraic topology and see what happens.  Before doing any algebraic topology, let me remind you what this means on the level of algebra.  The core idea is to replace a ring $R$ by the functor it corepresents, $\Spec R$.  For any ``test $\F_2$--algebra'' $T$, we set \[(\Spec R)(T) := \CatOf{Algebras}_{\F_2/}(R, T) \cong \CatOf{Schemes}_{/\F_2}(\Spec T, \Spec R).\]  More generally, we have the following definition:
+An abbreviated summary of this book is that we are going to put ``$\Spec$'' in front of rings appearing in algebraic topology and see what happens.  Before doing any algebraic topology, let me remind you what this means on the level of algebra.  The core idea is to replace a ring $R$ by the functor it corepresents, $\Spec R$.  For any ``test $\F_2$--algebra'' $T$, we set \[(\Spec R)(T) := \CatOf{Algebras}_{\F_2/}(R, T) \cong \CatOf{Schemes}_{/\F_2}(\Spec T, \Spec R).\]  More generally, we have the following definition:
 \begin{definition}
 An \textit{affine $\F_2$--scheme} is a functor $X: \CatOf{Algebras}_{\F_2/} \to \CatOf{Sets}$ which is (noncanonically) isomorphic to $\Spec R$ for some $\F_2$--algebra $R$.  Given such an isomorphism, we will refer to $\Spec R \to X$ as a \textit{parameter} for $X$ and its inverse $X \to \Spec R$ as a \textit{coordinate} for $X$.
 \end{definition}
@@ -220,7 +220,7 @@ We define the \textit{multiplicative group scheme} by \[\mathbb G_m = \Spec \F_2
 \end{example}
 
 \begin{remark}
-As presented above, the multiplicative group comes with a natural inclusion $\mathbb G_m \to \mathbb A^2$.  Specifically, the subset $\mathbb G_m \subseteq \mathbb A^2$ consists of pairs $(x, y)$ in the graph of the hyperbola $y = 1/x$.  However, the element $x$ also gives an $\mathbb A^1$--valued function $x\co \mathbb G_m \to \mathbb A^1$, and because multiplicative inverses in a ring are unique, we see that this map too is an inclusion.  These two inclusions have rather different properties relative to their ambient spaces, and we'll think harder about these essential differences later on.
+As presented above, the multiplicative group comes with a natural inclusion $\mathbb G_m \to \mathbb A^2$.  Specifically, the subset $\mathbb G_m \subseteq \mathbb A^2$ consists of pairs $(x, y)$ in the graph of the hyperbola $y = 1/x$.  However, the element $x$ also gives an $\mathbb A^1$--valued function $x\co \mathbb G_m \to \mathbb A^1$, and because multiplicative inverses in a ring are unique, we see that this map too is an inclusion.  These two inclusions have rather different properties relative to their ambient spaces, and we will think harder about these essential differences later on.
 \end{remark}
 
 \begin{example}[{cf.\ \Cref{WorkedAlpha2Example}}]\label{Alpha2Example}
@@ -234,7 +234,7 @@ This group scheme has several interesting properties, which we will merely state
 \begin{enumerate}
 \item $\alpha_2$ has the same underlying structure ring as $\mu_2 := \mathbb{G}_m[2]$, the $2$--torsion points of $\mathbb G_m$, but is not isomorphic to it.  (For instance, $\InternalHom{GroupSchemes}(\mu_2, \mu_2)$ gives the constant group scheme $\underline{\Z/2}$, but $\InternalHom{GroupSchemes}(\alpha_2, \mu_2) = \alpha_2$.)
 \item There is no commutative group scheme $G$ of rank four such that $\alpha_2 = G[2]$.
-\item If $E/\mathbb{F}_2$ is the supersingular elliptic curve, then there is a short exact sequence \[0 \rightarrow \alpha_2 \rightarrow E[2] \rightarrow \alpha_2 \rightarrow 0.\]  However, this short exact sequence doesn't split (even after base change).
+\item If $E/\mathbb{F}_2$ is the supersingular elliptic curve, then there is a short exact sequence \[0 \rightarrow \alpha_2 \rightarrow E[2] \rightarrow \alpha_2 \rightarrow 0.\]  However, this short exact sequence does not split (even after base change).
 \item The subgroups of $\alpha_2 \times \alpha_2$ of order $2$ are parameterized by the scheme $\mathbb{P}^1$, i.e., for $R$ an $\F_2$-algebra the subgroup schemes of $\alpha_2 \times \alpha_2$ of order two \emph{which are defined over $R$} are parameterized by the set $\mathbb{P}^1(R)$.
 \end{enumerate}
 \end{example}
@@ -255,7 +255,7 @@ The individual schemes $\mathbb A^{1, (n)}$ do not support group structures.  Af
 Similarly, one can define the scheme $\Gm[n]$ of elements of unipotent order $n$: \[\Gm[n] = \Spec \frac{\F_2[x,y]}{(xy - 1, x^n - 1)} \subseteq \Gm.\]  These \emph{are} all group schemes, and they nest together in a complicated way: there is an inclusion of $\Gm[n]$ into $\Gm[nm]$.\todo{Additionally, the only $\Gm[n]$ which are infinitesimal thickenings of $\Gm[1]$ are those with $n = 2^j$.}  There is also a second filtration along the lines of the one considered in \Cref{FormalGaExample}: \[\Gm^{(n)} = \Spec \frac{\F_2[x,y]}{(xy - 1, (x - 1)^n)}.\]  These schemes form a sequential system\todo{... of infinitesimal thickenings}, but they are only occasionally group schemes.  Specifically, $\Gm^{(2^j)}$ is a group scheme, in which case $\Gm^{(2^j)} \cong \Gm[2^j]$.  We define $\G_m$ using this common subsystem: \[\G_m := \{\Gm^{(2^j)}\}_{j=0}^\infty.\]
 \end{example}
 
-Let's now consider the example that we closed with last time, where we calculated $H\F_2^*(\RP^n) = \F_2[x] / (x^{n+1})$.  Putting ``$\Spec$'' in front of this, we could reinterpret this calculation as \[\Spec H\F_2^*(\RP^n) \cong \mathbb A^{1, (n)}.\]  This is such a useful thing to do that we will give it a notation all of its own:
+Let us now consider the example that we closed with last time, where we calculated $H\F_2^*(\RP^n) = \F_2[x] / (x^{n+1})$.  Putting ``$\Spec$'' in front of this, we could reinterpret this calculation as \[\Spec H\F_2^*(\RP^n) \cong \mathbb A^{1, (n)}.\]  This is such a useful thing to do that we will give it a notation all of its own:
 
 \begin{definition}\label{HF2SchemeForFiniteCplx}
 Let $X$ be a finite cell complex, so that $H\F_2^*(X)$ is a ring which is finite--dimensional as an $\F_2$--vector space.  We will write \[X_{H\F_2} = \Spec H\F_2^* X\] for the corresponding finite affine scheme.
@@ -265,7 +265,7 @@ Let $X$ be a finite cell complex, so that $H\F_2^*(X)$ is a ring which is finite
 Putting together the discussions from this time and last time, in the new notation we have calculated \[\RP^n_{H\F_2} \cong \mathbb A^{1, (n)}.\]
 \end{example}
 
-So far, this example just restates things we knew in a mildly different language.  Our driving goal for the next section is to incorporate as much information as we have about these cohomology rings $H\F_2^* (\RP^n)$ into this description, which will result in us giving a more ``precise'' name for this object.  Along the way, we will discover why $X$ had to be a \emph{finite} complex and how to think about more general $X$.  For now, though, let's content ourselves with investigating the Hopf algebra structure on $H\F_2^* \RP^\infty$, the cohomology of an infinite complex.
+So far, this example just restates things we knew in a mildly different language.  Our driving goal for the next section is to incorporate as much information as we have about these cohomology rings $H\F_2^* (\RP^n)$ into this description, which will result in us giving a more ``precise'' name for this object.  Along the way, we will discover why $X$ had to be a \emph{finite} complex and how to think about more general $X$.  For now, though, we will content ourselves with investigating the Hopf algebra structure on $H\F_2^* \RP^\infty$, the cohomology of an infinite complex.
 
 \begin{example}\label{RPExampleFaulty}
 Recall that $\RP^\infty$ is an $H$--space in two equivalent ways:
@@ -280,7 +280,7 @@ In either case, this induces a Hopf algebra diagonal \[H\F_2^* \RP^\infty \otime
 H\F_2^* \RP^\infty \arrow[leftarrow]{r}{\begin{pmatrix} \epsilon \otimes \id \\ \id \otimes \epsilon \end{pmatrix}} & H\F_2^* \RP^\infty \otimes H\F_2^* \RP^\infty \arrow[leftarrow]{r}{\Delta} &\arrow[ll,bend left=15,"\id"]  H\F_2^* \RP^\infty.
 \end{tikzcd}
 \end{center}
-and hence it takes the form \[\Delta(x) = x_1 + x_2.\]  Noticing that this is exactly the diagonal map in \Cref{InformalAdditiveGroupExample}, we tentatively identify ``$\RP^\infty_{H\F_2}$'' with the additive group.  This is extremely suggestive but does not take into account the fact that $\RP^\infty$ is an infinite complex, so we haven't allowed ourselves to write ``$\RP^\infty_{H\F_2}$'' just yet.  In light of the rest of the material discussed in this section, we have left open a very particular point: it's not clear if we should use the name ``$\mathbb G_a$'' or ``$\G_a$''.  We will straighten this out tomorrow.
+and hence it takes the form \[\Delta(x) = x_1 + x_2.\]  Noticing that this is exactly the diagonal map in \Cref{InformalAdditiveGroupExample}, we tentatively identify ``$\RP^\infty_{H\F_2}$'' with the additive group.  This is extremely suggestive but does not take into account the fact that $\RP^\infty$ is an infinite complex, so we have not yet allowed ourselves to write ``$\RP^\infty_{H\F_2}$''.  In light of the rest of the material discussed in this section, we have left open a very particular point: it is not clear if we should use the name ``$\mathbb G_a$'' or ``$\G_a$''.  We will straighten this out tomorrow.
 \end{example}
 
 
@@ -299,12 +299,12 @@ We left off in the previous section with an ominous finiteness condition in \Cre
 \item Both of these are made somewhat more complicated when taking the cohomology of an infinite complex.
 \item \label{SkewCommutativeDeficiency} (Cohomology rings for more elaborate cohomology theories are only skew-commutative, but ``$\Spec$'' requires a commutative input.)
 \end{enumerate}
-Today we will fix all these deficiencies of $X_{H\F_2}$ except for \#\ref{SkewCommutativeDeficiency}, which doesn't matter with mod--$2$ coefficients but which will be something of a bugbear throughout the rest of the book.
+Today we will fix all these deficiencies of $X_{H\F_2}$ except for \#\ref{SkewCommutativeDeficiency}, which does not matter with mod--$2$ coefficients but which will be something of a bugbear throughout the rest of the book.
 
-Let's begin by considering the grading on $H\F_2^* X$, where $X$ is a finite complex.  In algebraic geometry, the following standard construction is used to track gradings:
+We will begin by considering the grading on $H\F_2^* X$, where $X$ is a finite complex.  In algebraic geometry, the following standard construction is used to track gradings:
 
 \begin{definition}[{\cite[Definition 2.95]{StricklandFSFG}}]
-A \textit{$\Z$--grading} on a ring $R$ is a system of additive subgroups $R_k$ of $R$ satisfying $R = \bigoplus_k R_k$, $1 \in R_0$, and $R_j R_k \subseteq R_{j+k}$.  Additionally, a map $f\co R \to S$ of graded rings is said to \textit{respect the grading} if $f(R_k) \subseteq S_k$.\footnote{The terminology ``$\Z$--filtering'' might be more appropriate, but this is the language that's used.}
+A \textit{$\Z$--grading} on a ring $R$ is a system of additive subgroups $R_k$ of $R$ satisfying $R = \bigoplus_k R_k$, $1 \in R_0$, and $R_j R_k \subseteq R_{j+k}$.  Additionally, a map $f\co R \to S$ of graded rings is said to \textit{respect the grading} if $f(R_k) \subseteq S_k$.\footnote{The terminology ``$\Z$--filtering'' might be more appropriate, but this is the language commonly used.}
 \end{definition}
 
 \begin{lemma}[{\cite[Proposition 2.96]{StricklandFSFG}}]\label{GradedAndGmEquivAgree}
@@ -318,7 +318,7 @@ This notion from algebraic geometry is somewhat different from what we are used 
 
 We can modify our perspective very slightly to arrive at the algebraic geometers', by replacing $H\F_2$ with the periodified spectrum \[H\F_2P = \bigvee_{j=-\infty}^\infty \Susp^j H\F_2.\]  This spectrum becomes a ring in the homotopy category by using the factorwise-defined multiplication maps \[\Susp^j H\F_2 \sm \Susp^k H\F_2 \simeq \Susp^{j+k} (H\F_2 \sm H\F_2) \xrightarrow{\Susp^{j+k} \mu} \Susp^{j+k} H\F_2.\]  This spectrum has the property that $H\F_2P^0(X)$ is isomorphic to $\bigoplus_n H\F_2^n(X)$ as ungraded rings, but now we can make topological sense of the sum of two classes which used to live in different $H\F_2$--degrees.  At this point we can manually craft the desired coaction map $\alpha^*$ from \Cref{GradedAndGmEquivAgree}, but we will shortly find that algebraic topology gifts us with it on its own.
 
-Our route to finding this internally occurring $\alpha^*$ is by turning to the next supplementary structure: the action of the Steenrod algebra.  Naively approached, this does not fit into the framework we've been sketching so far: the Steenrod algebra arises as the homotopy endomorphisms of $H\F_2$ and so is a \emph{noncommutative} algebra.  In turn, the action map
+Our route to finding this internally occurring $\alpha^*$ is by turning to the next supplementary structure: the action of the Steenrod algebra.  Naively approached, this does not fit into the framework we have been sketching so far: the Steenrod algebra arises as the homotopy endomorphisms of $H\F_2$ and so is a \emph{noncommutative} algebra.  In turn, the action map
 \begin{center}
 \begin{tikzcd}
 \mathcal A^* \otimes H\F_2^* X \arrow{r} \arrow[equal]{d} & H\F_2^* X \arrow[equal]{d} \\
@@ -424,7 +424,7 @@ In summary, the formula $\RP^\infty_{H\F_2} \cong \G_a$ is meant to point out th
 \todo{This section is written gradedly and probably shouldn't be, for consistency.  (In fact, this is the cause of some of the confusion about the $\Gm$--action used tomorrow to separate out the homotopy degrees...)}
 
 \todo{It's not clear to me that this introduction should be written in terms of cohomology rather than homology. It's true that yesterday we were talking about cohomology, but it's also true that the spectral sequence we're going to build takes in homology.  (More generally, contexts take in homology.  I still find this a little puzzling, that Strickland's formal schemes don't seem to live in the descent picture.)}
-Today we'll focus on an important classical tool: the Adams spectral sequence.  We're going to study this in greater earnest later on, so I will avoid giving a satisfying construction today.  But, even without a construction, it's instructive to see how such a thing comes about.  \citeme{I first saw this presentation from Matt Ando. He must have learned it from someone. I'd like to know who to attribute this to}  Begin by considering the following three self-maps of the stable sphere:
+In this section, we will focus on an important classical tool: the Adams spectral sequence.  We are going to study this in greater earnest later on, so I will avoid giving a satisfying construction today.  But, even without a construction, it is instructive to see how such a thing comes about.  \citeme{I first saw this presentation from Matt Ando. He must have learned it from someone. I'd like to know who to attribute this to}  Begin by considering the following three self-maps of the stable sphere:
 \begin{align*}
 \S^0 & \xrightarrow{0} \S^0, & \S^0 & \xrightarrow{1} \S^0, & \S^0 & \xrightarrow{2} \S^0.
 \end{align*}
@@ -580,8 +580,25 @@ Consider the degenerate case $X = H\F_2$.  Then $H\F_{2*}(H\F_2) = \mathcal A_*$
 \end{example}
 
 \begin{example}
+In order to compute the Adams $E_2$--page for $X = kO$, we use the following trio of cofiber sequences:
+\begin{align*}
+\Susp kO & \xrightarrow{\cdot \eta} kO \to kU, &
+kU & \xrightarrow{\cdot 2} kU \to kU / 2, &
+kU / 2 & \xrightarrow{\cdot \beta} kU / 2 \to kU / (2, \beta) = H\F_2.
+\end{align*}
+This gives a resolution of $H\F_2$ via an iterated cofiber of free $kO$--modules, with Poincar\'e series \[((1 + t^2) + t^3(1 + t^2)) + t((1 + t^2) + t^3(1 + t^2)) = 1 + t + t^2 + 2t^3 + t^4 + t^5 + t^6.\]  This gives a small presentation of $\pi_* H\F_2 \sm_{kO} H\F_2$ by repeatedly using the identity $kO \sm_{kO} H\F_2 \simeq H\F_2$: it is a commutative Hopf algebra over $\F_2$ with the above Poincar\'e series.  It follows from Borel--Milnor--Moore~\cite[Theorem 7.11]{MilnorMoore} that
+
+computation that this gives $\Spec A(1)_*$
+
+remark about what $\Spec A(1)_*$ represents
+
+dual computation that the $H\F_2$--homology of $kO$ is $\mathcal A_* \mmod \mathcal A(1)_*$, using the $kO$--module Adams spectral sequence \[\Ext_{\mathcal A(1)_*}^{*, *}(\F_2, \pi_* H\F_2 \sm_{kO} (kO \sm H\F_2)) \Rightarrow \pi_* (kO \sm H\F_2).\]
+
+computation of the $E_2$--page of the Adams spectral sequence --- perhaps using a non--free resolution and a free one
+
+argument that there are no differentials
+\todo{Finish Mike Hill and Catherine's working of the Adams spectral sequence for $kO$.}
 \todo{The ordering of these examples probably isn't great, but the ASS pictures should appear on consecutive pages.}
-\todo{Mike Hill and Catherine's working of the Adams spectral sequence for $kO$.}
 \end{example}
 
 \begin{example}
